Remove String.format